// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with back button 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={true}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="Which stage best describes where Roger is on their journey?"
  section="section"
  subsection="subsection"
  testID="stageScreen"
/>
`;

exports[`renders correctly with first item 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={true}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="Which stage best describes where Roger is on their journey?"
  section="section"
  selectedStageId={1}
  subsection="subsection"
  testID="stageScreen"
/>
`;

exports[`renders correctly with nav props 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={true}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="Which stage best describes where Bert is on their journey?"
  section="section"
  subsection="subsection"
  testID="stageScreen"
/>
`;

exports[`renders correctly with question text 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={true}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="QUESTION"
  section="section"
  subsection="subsection"
  testID="stageScreen"
/>
`;

exports[`renders correctly with redux props 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={true}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="Which stage best describes where Roger is on their journey?"
  section="section"
  subsection="subsection"
  testID="stageScreen"
/>
`;

exports[`renders correctly without back button 1`] = `
<PathwayStageScreen
  activeButtonText="STILL HERE"
  buttonText="I AM HERE"
  enableBackButton={false}
  isSelf={false}
  onScrollToStage={[Function]}
  onSelect={[Function]}
  questionText="Which stage best describes where Roger is on their journey?"
  section="section"
  subsection="subsection"
  testID="stageScreen"
/>
`;
